--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 POSTGRES_USER=root
 POSTGRES_PASSWORD=password
-DBHOST=127.0.0.1
+DBHOST=localhost
 DBPORT=5432
 POSTGRES_DB=batman
+SECRET="dsfha398f@@!)($#!fdhsasd)"
