--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DBHOST=localhost
 DBPORT=5432
 POSTGRES_DB=batman
 SECRET="dsfha398f@@!)($#!fdhsasd)"
+MINIO_ROOT_USER=user
+MINIO_ROOT_PASSWORD=1234
